# llm-eval-harness

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: eval.yml
assets/: desktop.ini
datasets/: adversarial_qa.jsonl  summarization_golden.jsonl
llm_eval/: __init__.py  __main__.py  cache.py  clients.py  config.py  dashboard.py  report.py  runner.py  scorers.py
prompts/: qa_grounded.txt  summarize.v1.txt  summarize.v2.txt
suites/: adversarial.json  summarize.json
tests/: test_cache.py  test_new_scorers.py  test_scorers.py
