[project]
name = "llm-eval-harness"
version = "0.1.0"
description = "Provider-agnostic LLM evaluation and CI regression-gating harness."
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
llm-eval = "llm_eval.__main__:main"

[tool.setuptools.packages.find]
include = ["llm_eval*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 110
